[gd_scene load_steps=6 format=3 uid="uid://nu4sdvkx6sba"]

[ext_resource type="Script" path="res://options.gd" id="1_nhfcp"]
[ext_resource type="Texture2D" uid="uid://356qs3vbh8rc" path="res://fon_340kh200.png" id="2_mtqhy"]
[ext_resource type="Texture2D" uid="uid://bk8g45qpl7by8" path="res://korobka2otkr40kh40.png" id="3_ut1xq"]
[ext_resource type="AudioStream" uid="uid://7r13my63if73" path="res://Sounds/background_music.mp3" id="4_be2ox"]
[ext_resource type="FontFile" uid="uid://cjqi56wal05sq" path="res://Fonts/agat-8_Regular.ttf" id="4_o13lv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhfcp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -120.0
offset_right = 190.0
offset_bottom = 120.0
texture = ExtResource("2_mtqhy")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 19

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 77
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
text = "←"
icon = ExtResource("3_ut1xq")
flat = true
clip_text = true
icon_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_o13lv")
text = "Настройки"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o13lv")
text = "Музыка"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
step = 2.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_o13lv")
text = "Эффекты"

[node name="Effects" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
step = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_be2ox")
volume_db = -30.919
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Effects" to="." method="_on_effects_value_changed"]
